<!--
  ~ File: strings.xml
  ~ Project: BroadcastBottom
  ~
  ~ Created by albrivas on 14/12/2020
  ~ Copyright © 2019 Alberto Rivas. All rights reserved.
  -->

<resources>
    <string name="app_name">BroadcastBottom</string>
    <string name="title_home" translatable="false">Inicio</string>
    <string name="title_settings" translatable="false">Ajustes</string>
    <string name="title_notifications" translatable="false">Alertas</string>
    <string name="label_login">Don\'t have an account? <font color="#511FDC"><u>Sing Up</u></font></string>
    <string name="label_forgot_password"><u>Forgot your password?</u></string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_username">Nombre completo</string>
    <string name="button_login">Login</string>
    <string name="hint_full_name">Nombre completo</string>
    <string name="button_create">Registrar</string>
    <string name="label_description_sign_up">
        Debe introducir una cuenta de correo válida,
        en caso contrario no podrá reestablecer la contraseña
    </string>
    <string name="label_register">¿Ya tienes una cuenta? <font color="#511FDC"><u>Iniciar sesión</u></font></string>
    <string name="choose_user_email">Email / Username</string>
    <string name="choose_google">Google</string>
    <string name="choose_facebook">Facebook</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_reset">Resetear contraseña</string>
    <string name="label_reset_password">
        Necesitamos su correo electronico
        registrado para enviar las instrucciones de restablecimiento de la contraseña
    </string>
    <string name="button_reset">Enviar</string>
    <string name="label_reset"><font color="#511FDC"><u>I have remembered my password</u></font></string>
    <string name="error_field">Rellene el campo</string>
    <string name="error_email">Email no válido</string>

    <!-- Login AC-->
    <string name="image_login_description">Logo BroadcastBottom</string>
    <string name="button_choose_user_pass_description">Entrar con email y contraseña</string>
    <string name="button_choose_google_description">Entrar con una cuenta de Google</string>
    <string name="button_choose_facebook_description">Entrar con una cuenta de Facebook</string>
    <string name="alert_facebook_install">Es necesario tener la app de Facebook instalada</string>
    <string name="button_snack_bar_facebook">Descargar</string>

    <!-- IDS Firebase -->
    <string name="facebook_app_id">3268637276559185</string>
    <string name="fb_login_protocol_scheme">fb3268637276559185</string>

    <!-- Profile -->
    <string name="profile_name">Nombre</string>
    <string name="hint_name">Introduce tu nombre</string>
    <string name="profile_email">Email</string>
    <string name="hint_email">Introduce tu email</string>
    <string name="profile_birthday">Fecha de nacimiento</string>
    <string name="profile_phone">Teléfono</string>
    <string name="hint_phone">Introduce tu teléfono</string>
    <string name="date_format">%1$s-%2$s-%3$s</string>
    <string name="close_session">Cerrar sesión</string>

    <!-- Alert dialog -->
    <string name="button_cancel">Cancelar</string>
    <string name="button_edit">Editar</string>

</resources>