<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.albrivas.broadcastbottom.ui.login.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:id="@+id/choose_container"
        style="@style/ScrollVertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:context=".ui.login.choose.ChooseLoginFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_login"
                style="@style/TitleLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login_user"
                style="@style/ButtonLogin"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/button_choose_user_pass_description"
                android:onClick="@{() -> viewmodel.navigateToLogin()}"
                android:text="@string/choose_user_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_login"
                tools:text="Email / Username" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login_google"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/button_choose_google_description"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/choose_google"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="30dp"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login_user"
                app:strokeColor="@android:color/darker_gray"
                tools:text="Google" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login_facebook"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/button_choose_facebook_description"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/choose_facebook"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:backgroundTint="@android:color/white"
                app:cornerRadius="30dp"
                app:icon="@drawable/ic_facebook"
                app:iconGravity="textStart"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login_google"
                app:strokeColor="@android:color/darker_gray"
                tools:text="Facebook" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/link_signup"
                style="@style/SignUpLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewmodel.navigateToSignUp()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login_facebook" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>