<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.albrivas.broadcastbottom.ui.profile.ProfileViewModel" />

        <variable
            name="user"
            type="com.albrivas.broadcastbottom.domain.model.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6FAFAFA"
        tools:context=".ui.profile.ProfileFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageProfile"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:elevation="12dp"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/containerInformationProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/LabelTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:text="@string/profile_email" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/labelEmail"
                            style="@style/LabelNormal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="60"
                            android:text="@{user.email}" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="10"
                            android:padding="4dp"
                            app:srcCompat="@drawable/ic_edit" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/LabelTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:text="@string/profile_birthday" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/labelBirth"
                            style="@style/LabelNormal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="60"
                            android:text="@{user.birthday.toString()}" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="10"
                            android:padding="4dp"
                            app:srcCompat="@drawable/ic_edit" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/LabelTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:text="@string/profile_name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/labelName"
                            style="@style/LabelNormal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="60"
                            android:text="@{user.name}" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="10"
                            android:padding="4dp"
                            app:srcCompat="@drawable/ic_edit" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/LabelTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="30"
                            android:text="@string/profile_phone" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/labelPhone"
                            style="@style/LabelNormal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="60"
                            android:text="@{user.phone}" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="10"
                            android:padding="4dp"
                            app:srcCompat="@drawable/ic_edit" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </ScrollView>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/edit_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="89dp"
            android:layout_marginBottom="11dp"
            android:onClick="@{() -> viewmodel.selectImage()}"
            app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
            app:layout_constraintEnd_toEndOf="@+id/imageProfile"
            app:layout_constraintStart_toStartOf="@+id/imageProfile"
            app:layout_constraintTop_toTopOf="@+id/imageProfile"
            app:srcCompat="@drawable/ic_edit_image_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>